# micro-ddd

./: .flake8  .gitignore  .pre-commit-config.yaml  alembic.ini  docker-compose.yaml  dockerfile  makefile  pyproject.toml
alembic/: env.py
alembic/versions/: 0a0c9e115952_add_products_table.py  1918fb39c7f6_add_used_field_to_files_table.py  1de4d78e6665_add_avatar_file_id_to_user.py  3f867f5ccb4b_add_users_table.py  96e55cd5f195_add_files_table.py  b2e4c4c6cf92_add_timestamp_fields_to_users_table.py  ce473f876d27_add_size_to_file_table.py  e84f03e4ede7_remove_category_and_and_add_bucket_in_.py  efd38507ae34_remove_products_table_and_schema.py
src/: main.py  start_tasks.py
src/auth/: bootstrap.py
src/auth/adapters/: jwt_service_impl.py  unit_of_work_impl.py  user_manager_impl.py
src/auth/domain/: jwt_service.py  unit_of_work.py  user_manager.py
src/auth/entrypoints/: dependencies.py  request_models.py  routes.py
src/auth/service_layer/: command_handlers.py  commands.py  container.py  handlers.py  messages.py  queries.py  query_handlers.py
src/auth_service/: bootstrap.py
src/auth_service/adapters/: auth_service_impl.py  jwt_service_impl.py  unit_of_work_impl.py  user_manager_impl.py
src/auth_service/domain/: unit_of_work.py  user_manager.py
src/product/: bootstrap.py
src/shared/: auth_service.py  base.py  broker_service.py  db_setup.py  dtos.py  errors.py  exceptions.py  logger.py  message_broker.py  message_bus.py  protocols.py  storage_service.py
src/storage/: bootstrap.py
src/storage_service/: bootstrap.py  routes.py
src/workers/: main.py
(+70 files in other folders)
